<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:backgroundTint="#7b7b7b"
    android:background="#535353">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/chooseCourse"
                android:id="@+id/textView"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioGroup"
                android:layoutMode="clipBounds"
                android:weightSum="2"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Programming I"
                    android:id="@+id/prog1"
                    android:checked="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="#ffffffff" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Programming II"
                    android:id="@+id/prog2"
                    android:checked="false"
                    android:layout_marginEnd="39dp"
                    android:layout_below="@+id/textView"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:textColor="#ffffffff"
                    android:layout_gravity="right"
                    android:layout_weight="0.47" />

            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.35">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout"
                    android:weightSum="5"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="37dp">

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/name"
                        android:maxLength="20"
                        android:textColor="#ffffff"
                        android:textAlignment="textEnd"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/studentId"
                        android:maxLength="4"
                        android:textColor="#ffffff"
                        android:textAlignment="viewEnd"
                        android:gravity="end"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/mark1"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:maxLength="3"
                        android:paddingTop="5dp"
                        android:gravity="end" />

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/mark2"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:maxLength="3"
                        android:paddingTop="5dp"
                        android:gravity="end" />

                    <EditText
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/mark3"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:maxLength="3"
                        android:gravity="end" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/linearLayout2"
                    android:weightSum="5"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_toLeftOf="@+id/linearLayout"
                    android:layout_toStartOf="@+id/linearLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/nameTag"
                        android:id="@+id/nameTag"
                        android:layout_marginBottom="15dp"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/idTag"
                        android:id="@+id/idTag"
                        android:layout_marginBottom="15dp"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/eval1Prog1"
                        android:id="@+id/eval1"
                        android:layout_marginBottom="15dp"
                        android:textColor="#ffffffff"
                        android:layout_weight="1"
                        android:layout_marginRight="5dp"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/eval2Prog1"
                        android:id="@+id/eval2"
                        android:layout_marginBottom="15dp"
                        android:textColor="#ffffffff"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:text="@string/eval3Prog1"
                        android:id="@+id/eval3"
                        android:textColor="#ffffffff"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="336dp"
                android:layout_height="43dp"
                android:layout_marginBottom="90dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/finalScore"
                    android:visibility="visible"
                    android:textColor="#ffffffff"
                    android:typeface="monospace"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="-90dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="COMPUTE"
                    android:id="@+id/compute"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_weight="1" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:text="CLEAR"
                    android:id="@+id/clear"
                    android:layout_below="@+id/compute"
                    android:layout_alignLeft="@+id/compute"
                    android:layout_alignStart="@+id/compute"
                    android:layout_alignRight="@+id/exit"
                    android:layout_alignEnd="@+id/exit"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="30dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DONE"
                    android:id="@+id/done"
                    android:layout_below="@+id/clear"
                    android:layout_alignLeft="@+id/clear"
                    android:layout_alignStart="@+id/clear"
                    android:layout_alignRight="@+id/clear"
                    android:layout_alignEnd="@+id/clear"
                    android:layout_weight="1" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="EXIT"
                    android:id="@+id/exit"
                    android:layout_below="@+id/done"
                    android:layout_alignRight="@+id/compute"
                    android:layout_alignEnd="@+id/compute"
                    android:layout_alignLeft="@+id/compute"
                    android:layout_alignStart="@+id/compute"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/results"
                android:id="@+id/textView2"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resultsBox"
                android:textColor="#ffffff"
                android:textIsSelectable="false"
                android:textSize="6.5dp"
                android:typeface="monospace" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
